--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 yarn.lock
+package-lock.json
 
 # testing
 /coverage
@@ -15,6 +16,7 @@ yarn.lock
 
 # production
 /build
+/.json
 
 # misc
 .DS_Store
@@ -34,3 +36,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# Local Netlify folder
+.netlify
