--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "bookworm-light-nextjs",
-  "author": "Themefisher",
-  "version": "2.0.0",
-  "private": false,
-  "license": "MIT",
+  "name": "next-tailwind-boilerplate",
+  "description": "a nextjs and tailwindcss boilerplate by themefisher.com",
+  "version": "1.0.1",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "node lib/jsonGenerator.js && next dev",
     "build": "node lib/jsonGenerator.js && next build",
@@ -12,15 +12,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^4.2.4",
     "next": "13.0.7",
-    "next-mdx-remote": "^3.0.8",
+    "next-mdx-remote": "^3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-grid-gallery": "^1.0.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.7.1",
+    "react-image-lightbox": "^5.1.4",
+    "react-lite-youtube-embed": "^2.3.52",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1"
   },
@@ -36,7 +41,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "sass": "^1.57.0",
+    "sass": "^1.57.1",
     "sharp": "^0.31.2",
     "tailwind-bootstrap-grid": "^5.0.1",
     "tailwindcss": "^3.2.4"
